<VideoPlayer/> bugfix: max height changed Comments would be clipped if out of viewport

--- a/frontend/src/components/VideoPlayer/style.css
+++ b/frontend/src/components/VideoPlayer/style.css
@@ -5,7 +5,7 @@
 
 .video-player-container {
     max-width: 100vh; 
-    max-height: 100vh;
+    max-height: 100%;
     width: auto; 
     height: auto; 
     z-index: -100;
